syntax = "proto3";
option go_package = "api_pb";
package com.github.rerost.todolist_server.api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service TaskService {
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse) {
    option (google.api.http) = {
      get: "/tasks"
    };
  }
  rpc GetTask (GetTaskRequest) returns (Task) {
    option (google.api.http) = {
      get: "/tasks/{task_id}"
    };
  }
  rpc CreateTask (CreateTaskRequest) returns (Task) {
    option (google.api.http) = {
      post: "/tasks"
      body: "*"
    };
  }
  rpc UpdateTask (UpdateTaskRequest) returns (Task) {
    option (google.api.http) = {
      patch: "/tasks/{task.task_id}"
      body: "task"
    };
  }
  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/tasks/{task_id}"
    };
  }
}

message Task {
  int64 task_id = 1;
  string title = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp deadline = 4;
}

message ListTasksRequest {
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message GetTaskRequest {
  string task_id = 1;
}

message CreateTaskRequest {
  Task task = 1;
}

message UpdateTaskRequest {
  Task task = 1;
}

message DeleteTaskRequest {
  string task_id = 1;
}
